stack card and why choose us done

--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Top-Rated Digital Agency in USA | Web Design, SEO, Marketing & App Development</title>
+    <meta name="description" content="Looking for a reliable digital agency in the USA? Benzify offers expert web design, SEO, graphic design, Google Ads, app development, Shopify marketing & more." />
   </head>
   <body>
     <div id="root"></div>
